gakuat ya Allah mataku: baru langkah B dan C

--- a/backend/.env
+++ b/backend/.env
@@ -7,3 +7,5 @@ DB_PORT=5432
 DB_NAME=ai_mock_interview_db
 DB_USER=postgres # User default Laragon/PostgreSQL
 DB_PASSWORD=root # Password saat menghubungkan pgAdmin ke Laragon
+
+GEMINI_API_KEY="" # Ganti dengan Kunci API Gemini Anda
